--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- ==========  Logo ========== -->
              <!-- <img class="logo" alt="logotype" src="assets/img/tr.jpg"> -->
 <!-- ==========  User's photo ========== -->
-              <a href=""><img class="photo" alt="photo" src="assets/img/me2.JPG"></a>
+              <a href=""><img class="photo" alt="photo" src="assets/img/me2.jpg"></a>
             </div>
                     <h3 class="mobile bcolor">
                         <a href="">Tshewang</a>
