--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="table-cell">
                         <div class="container">
                           <h1>Hi! I'm <span class="glcolor">Tshewang</span></h1>
-<p> Welcome! <br />I believe you are either looking for web developer or you already know me and wants to know further about me. I am a student of College of Science and Technology, Royal University of Bhutan studying B.E Information Technology, 4th year. Hopefully, I will be completing my degree by July 2015. Starting the 9th grade in High School, I have been very passionate about studying IT. Athough IT is a broad subject, I would like to say that I'm interested in everything regarding IT. I have been working with web development projects for last one and half year to increase and broaden my programming and designing skills.
+<p> Welcome! <br />I believe you are either looking for web developer or you already know me and wants to know further about me. I am a student of College of Science and Technology, Royal University of Bhutan studying B.E Information Technology, 4th year. Hopefully, I will be completing my degree by July 2015. Starting the 9th grade in High School, I have been very passionate about studying IT. Athough IT is a broad subject, I would like to say that I'm interested in everything regarding IT. I have been working with web development projects for last one and half year to increase and broaden my programming and designing skills. This is so interesting
 
 </p>
 </div>
